--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "electron-react-boilerplate",
-  "productName": "electron-react-boilerplate",
-  "version": "1.0.0",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "name": "recraft-image-editor",
+  "productName": "RecraftImageEditor",
+  "version": "0.0.1",
+  "description": "A simple to use and minimal image editor",
   "main": "./main.js",
   "author": {
-    "name": "C. T. Lin",
-    "email": "chentsulin@gmail.com",
-    "url": "https://github.com/chentsulin"
+    "name": "Recraft Studio",
+    "email": "recraftstudio@gmail.com",
+    "url": "https://github.com/recraftstudio"
   },
   "license": "MIT",
   "dependencies": {
