added active class uploader

--- a/package.json
+++ b/package.json
@@ -158,8 +158,10 @@
     "webpack-validator": "^2.3.0"
   },
   "dependencies": {
+    "canvas": "^1.6.3",
     "electron-debug": "^1.1.0",
     "font-awesome": "^4.7.0",
+    "jsdom": "^9.11.0",
     "konva": "^1.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
