--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,10 @@
     "url": "https://github.com/recraftstudio"
   },
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.1",
+    "webpack": "^2.2.1"
   }
 }
